--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.1",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "daisyui": "^5.0.35",
